Antlr.Tests/Grammar/jc/jcParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 jc.g 2013-04-28 00:38:07

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class jcParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "BOOL", "CLOSE_BRACE", "CLOSE_PAR", "COMMA", "COMMENT", "DATE", "DATETIME", "DATE_FRAG", "DAY", "DIGIT", "DIV", "DOT", "HOUR", "IDENT", "LETTER", "MILLISECOND", "MINUS", "MINUTE", "MOD", "MONTH", "MUL", "MULTILINE_COMMENT", "NAME", "NUMBER", "OPEN_BRACE", "OPEN_PAR", "PATH", "PLUS", "SECOND", "SEMICOL", "STRING", "TIME", "TIME_FRAG", "TYPE", "WS", "YEAR", "':'", "'function'", "'get'", "'if'", "'return'", "'set'", "'var'"
	};
	public const int EOF=-1;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int ASSIGN=4;
	public const int BOOL=5;
	public const int CLOSE_BRACE=6;
	public const int CLOSE_PAR=7;
	public const int COMMA=8;
	public const int COMMENT=9;
	public const int DATE=10;
	public const int DATETIME=11;
	public const int DATE_FRAG=12;
	public const int DAY=13;
	public const int DIGIT=14;
	public const int DIV=15;
	public const int DOT=16;
	public const int HOUR=17;
	public const int IDENT=18;
	public const int LETTER=19;
	public const int MILLISECOND=20;
	public const int MINUS=21;
	public const int MINUTE=22;
	public const int MOD=23;
	public const int MONTH=24;
	public const int MUL=25;
	public const int MULTILINE_COMMENT=26;
	public const int NAME=27;
	public const int NUMBER=28;
	public const int OPEN_BRACE=29;
	public const int OPEN_PAR=30;
	public const int PATH=31;
	public const int PLUS=32;
	public const int SECOND=33;
	public const int SEMICOL=34;
	public const int STRING=35;
	public const int TIME=36;
	public const int TIME_FRAG=37;
	public const int TYPE=38;
	public const int WS=39;
	public const int YEAR=40;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public jcParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public jcParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}
	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return jcParser.tokenNames; } }
	public override string GrammarFileName { get { return "jc.g"; } }


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_build() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_build() {}

	// $ANTLR start "build"
	// jc.g:9:8: public build : ( class )* EOF ;
	[GrammarRule("build")]
	public AstParserRuleReturnScope<CommonTree, IToken> build()
	{
		EnterRule_build();
		EnterRule("build", 1);
		TraceIn("build", 1);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken EOF2 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> class1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree EOF2_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "build");
		DebugLocation(9, 1);
		try
		{
			// jc.g:10:2: ( ( class )* EOF )
			DebugEnterAlt(1);
			// jc.g:10:4: ( class )* EOF
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(10, 4);
			// jc.g:10:4: ( class )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_0 = input.LA(1);

				if ((LA1_0==NAME))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// jc.g:10:4: class
					{
					DebugLocation(10, 4);
					PushFollow(Follow._class_in_build46);
					class1=@class();
					PopFollow();

					adaptor.AddChild(root_0, class1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(10, 11);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_build49); 
			EOF2_tree = (CommonTree)adaptor.Create(EOF2);
			adaptor.AddChild(root_0, EOF2_tree);


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("build", 1);
			LeaveRule("build", 1);
			LeaveRule_build();
	    }
	 	DebugLocation(11, 1);
		} finally { DebugExitRule(GrammarFileName, "build"); }
		return retval;

	}
	// $ANTLR end "build"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_class() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_class() {}

	// $ANTLR start "class"
	// jc.g:13:1: class : NAME ( ':' NAME )? OPEN_BRACE classBody CLOSE_BRACE ;
	[GrammarRule("class")]
	private AstParserRuleReturnScope<CommonTree, IToken> @class()
	{
		EnterRule_class();
		EnterRule("class", 2);
		TraceIn("class", 2);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken NAME3 = default(IToken);
	    IToken char_literal4 = default(IToken);
	    IToken NAME5 = default(IToken);
	    IToken OPEN_BRACE6 = default(IToken);
	    IToken CLOSE_BRACE8 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> classBody7 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree NAME3_tree = default(CommonTree);
	    CommonTree char_literal4_tree = default(CommonTree);
	    CommonTree NAME5_tree = default(CommonTree);
	    CommonTree OPEN_BRACE6_tree = default(CommonTree);
	    CommonTree CLOSE_BRACE8_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "class");
		DebugLocation(13, 1);
		try
		{
			// jc.g:14:2: ( NAME ( ':' NAME )? OPEN_BRACE classBody CLOSE_BRACE )
			DebugEnterAlt(1);
			// jc.g:14:4: NAME ( ':' NAME )? OPEN_BRACE classBody CLOSE_BRACE
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(14, 4);
			NAME3=(IToken)Match(input,NAME,Follow._NAME_in_class61); 
			NAME3_tree = (CommonTree)adaptor.Create(NAME3);
			adaptor.AddChild(root_0, NAME3_tree);

			DebugLocation(14, 9);
			// jc.g:14:9: ( ':' NAME )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			int LA2_0 = input.LA(1);

			if ((LA2_0==41))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// jc.g:14:10: ':' NAME
				{
				DebugLocation(14, 10);
				char_literal4=(IToken)Match(input,41,Follow._41_in_class64); 
				char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
				adaptor.AddChild(root_0, char_literal4_tree);

				DebugLocation(14, 14);
				NAME5=(IToken)Match(input,NAME,Follow._NAME_in_class66); 
				NAME5_tree = (CommonTree)adaptor.Create(NAME5);
				adaptor.AddChild(root_0, NAME5_tree);


				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(14, 21);
			OPEN_BRACE6=(IToken)Match(input,OPEN_BRACE,Follow._OPEN_BRACE_in_class70); 
			OPEN_BRACE6_tree = (CommonTree)adaptor.Create(OPEN_BRACE6);
			adaptor.AddChild(root_0, OPEN_BRACE6_tree);

			DebugLocation(14, 32);
			PushFollow(Follow._classBody_in_class72);
			classBody7=classBody();
			PopFollow();

			adaptor.AddChild(root_0, classBody7.Tree);
			DebugLocation(14, 42);
			CLOSE_BRACE8=(IToken)Match(input,CLOSE_BRACE,Follow._CLOSE_BRACE_in_class74); 
			CLOSE_BRACE8_tree = (CommonTree)adaptor.Create(CLOSE_BRACE8);
			adaptor.AddChild(root_0, CLOSE_BRACE8_tree);


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("class", 2);
			LeaveRule("class", 2);
			LeaveRule_class();
	    }
	 	DebugLocation(15, 1);
		} finally { DebugExitRule(GrammarFileName, "class"); }
		return retval;

	}
	// $ANTLR end "class"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_classBody() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_classBody() {}

	// $ANTLR start "classBody"
	// jc.g:17:1: classBody : ( class | member | property | function )* ;
	[GrammarRule("classBody")]
	private AstParserRuleReturnScope<CommonTree, IToken> classBody()
	{
		EnterRule_classBody();
		EnterRule("classBody", 3);
		TraceIn("classBody", 3);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    AstParserRuleReturnScope<CommonTree, IToken> class9 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> member10 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> property11 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> function12 = default(AstParserRuleReturnScope<CommonTree, IToken>);


		try { DebugEnterRule(GrammarFileName, "classBody");
		DebugLocation(17, 1);
		try
		{
			// jc.g:18:2: ( ( class | member | property | function )* )
			DebugEnterAlt(1);
			// jc.g:18:4: ( class | member | property | function )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(18, 4);
			// jc.g:18:4: ( class | member | property | function )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=5;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				switch (input.LA(1))
				{
				case NAME:
					{
					alt3 = 1;
					}
					break;
				case TYPE:
					{
					int LA3_3 = input.LA(2);

					if ((LA3_3==NAME))
					{
						int LA3_6 = input.LA(3);

						if ((LA3_6==OPEN_BRACE))
						{
							alt3 = 3;
						}
						else if ((LA3_6==ASSIGN||LA3_6==SEMICOL))
						{
							alt3 = 2;
						}


					}


					}
					break;
				case 47:
					{
					alt3 = 2;
					}
					break;
				case 42:
					{
					alt3 = 4;
					}
					break;
				}

				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// jc.g:18:5: class
					{
					DebugLocation(18, 5);
					PushFollow(Follow._class_in_classBody86);
					class9=@class();
					PopFollow();

					adaptor.AddChild(root_0, class9.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// jc.g:18:13: member
					{
					DebugLocation(18, 13);
					PushFollow(Follow._member_in_classBody90);
					member10=member();
					PopFollow();

					adaptor.AddChild(root_0, member10.Tree);

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// jc.g:18:22: property
					{
					DebugLocation(18, 22);
					PushFollow(Follow._property_in_classBody94);
					property11=property();
					PopFollow();

					adaptor.AddChild(root_0, property11.Tree);

					}
					break;
				case 4:
					DebugEnterAlt(4);
					// jc.g:18:33: function
					{
					DebugLocation(18, 33);
					PushFollow(Follow._function_in_classBody98);
					function12=function();
					PopFollow();

					adaptor.AddChild(root_0, function12.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("classBody", 3);
			LeaveRule("classBody", 3);
			LeaveRule_classBody();
	    }
	 	DebugLocation(19, 1);
		} finally { DebugExitRule(GrammarFileName, "classBody"); }
		return retval;

	}
	// $ANTLR end "classBody"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_member() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_member() {}

	// $ANTLR start "member"
	// jc.g:21:1: member : decl SEMICOL ;
	[GrammarRule("member")]
	private AstParserRuleReturnScope<CommonTree, IToken> member()
	{
		EnterRule_member();
		EnterRule("member", 4);
		TraceIn("member", 4);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken SEMICOL14 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> decl13 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree SEMICOL14_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "member");
		DebugLocation(21, 1);
		try
		{
			// jc.g:22:2: ( decl SEMICOL )
			DebugEnterAlt(1);
			// jc.g:22:4: decl SEMICOL
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(22, 4);
			PushFollow(Follow._decl_in_member112);
			decl13=decl();
			PopFollow();

			adaptor.AddChild(root_0, decl13.Tree);
			DebugLocation(22, 9);
			SEMICOL14=(IToken)Match(input,SEMICOL,Follow._SEMICOL_in_member114); 
			SEMICOL14_tree = (CommonTree)adaptor.Create(SEMICOL14);
			adaptor.AddChild(root_0, SEMICOL14_tree);


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("member", 4);
			LeaveRule("member", 4);
			LeaveRule_member();
	    }
	 	DebugLocation(23, 1);
		} finally { DebugExitRule(GrammarFileName, "member"); }
		return retval;

	}
	// $ANTLR end "member"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_property() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_property() {}

	// $ANTLR start "property"
	// jc.g:25:1: property : TYPE NAME OPEN_BRACE ( 'get' codeBlock )? ( 'set' codeBlock )? CLOSE_BRACE ;
	[GrammarRule("property")]
	private AstParserRuleReturnScope<CommonTree, IToken> property()
	{
		EnterRule_property();
		EnterRule("property", 5);
		TraceIn("property", 5);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken TYPE15 = default(IToken);
	    IToken NAME16 = default(IToken);
	    IToken OPEN_BRACE17 = default(IToken);
	    IToken string_literal18 = default(IToken);
	    IToken string_literal20 = default(IToken);
	    IToken CLOSE_BRACE22 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> codeBlock19 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> codeBlock21 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree TYPE15_tree = default(CommonTree);
	    CommonTree NAME16_tree = default(CommonTree);
	    CommonTree OPEN_BRACE17_tree = default(CommonTree);
	    CommonTree string_literal18_tree = default(CommonTree);
	    CommonTree string_literal20_tree = default(CommonTree);
	    CommonTree CLOSE_BRACE22_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "property");
		DebugLocation(25, 1);
		try
		{
			// jc.g:26:2: ( TYPE NAME OPEN_BRACE ( 'get' codeBlock )? ( 'set' codeBlock )? CLOSE_BRACE )
			DebugEnterAlt(1);
			// jc.g:26:4: TYPE NAME OPEN_BRACE ( 'get' codeBlock )? ( 'set' codeBlock )? CLOSE_BRACE
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(26, 4);
			TYPE15=(IToken)Match(input,TYPE,Follow._TYPE_in_property126); 
			TYPE15_tree = (CommonTree)adaptor.Create(TYPE15);
			adaptor.AddChild(root_0, TYPE15_tree);

			DebugLocation(26, 9);
			NAME16=(IToken)Match(input,NAME,Follow._NAME_in_property128); 
			NAME16_tree = (CommonTree)adaptor.Create(NAME16);
			adaptor.AddChild(root_0, NAME16_tree);

			DebugLocation(26, 14);
			OPEN_BRACE17=(IToken)Match(input,OPEN_BRACE,Follow._OPEN_BRACE_in_property130); 
			OPEN_BRACE17_tree = (CommonTree)adaptor.Create(OPEN_BRACE17);
			adaptor.AddChild(root_0, OPEN_BRACE17_tree);

			DebugLocation(27, 3);
			// jc.g:27:3: ( 'get' codeBlock )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			int LA4_0 = input.LA(1);

			if ((LA4_0==43))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// jc.g:27:4: 'get' codeBlock
				{
				DebugLocation(27, 4);
				string_literal18=(IToken)Match(input,43,Follow._43_in_property136); 
				string_literal18_tree = (CommonTree)adaptor.Create(string_literal18);
				adaptor.AddChild(root_0, string_literal18_tree);

				DebugLocation(27, 10);
				PushFollow(Follow._codeBlock_in_property138);
				codeBlock19=codeBlock();
				PopFollow();

				adaptor.AddChild(root_0, codeBlock19.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(28, 3);
			// jc.g:28:3: ( 'set' codeBlock )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, decisionCanBacktrack[5]);
			int LA5_0 = input.LA(1);

			if ((LA5_0==46))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// jc.g:28:4: 'set' codeBlock
				{
				DebugLocation(28, 4);
				string_literal20=(IToken)Match(input,46,Follow._46_in_property145); 
				string_literal20_tree = (CommonTree)adaptor.Create(string_literal20);
				adaptor.AddChild(root_0, string_literal20_tree);

				DebugLocation(28, 10);
				PushFollow(Follow._codeBlock_in_property147);
				codeBlock21=codeBlock();
				PopFollow();

				adaptor.AddChild(root_0, codeBlock21.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }

			DebugLocation(29, 3);
			CLOSE_BRACE22=(IToken)Match(input,CLOSE_BRACE,Follow._CLOSE_BRACE_in_property153); 
			CLOSE_BRACE22_tree = (CommonTree)adaptor.Create(CLOSE_BRACE22);
			adaptor.AddChild(root_0, CLOSE_BRACE22_tree);


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("property", 5);
			LeaveRule("property", 5);
			LeaveRule_property();
	    }
	 	DebugLocation(30, 1);
		} finally { DebugExitRule(GrammarFileName, "property"); }
		return retval;

	}
	// $ANTLR end "property"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_function() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_function() {}

	// $ANTLR start "function"
	// jc.g:32:1: function : 'function' ( TYPE )? OPEN_PAR ( args )? CLOSE_PAR codeBlock ;
	[GrammarRule("function")]
	private AstParserRuleReturnScope<CommonTree, IToken> function()
	{
		EnterRule_function();
		EnterRule("function", 6);
		TraceIn("function", 6);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken string_literal23 = default(IToken);
	    IToken TYPE24 = default(IToken);
	    IToken OPEN_PAR25 = default(IToken);
	    IToken CLOSE_PAR27 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> args26 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> codeBlock28 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree string_literal23_tree = default(CommonTree);
	    CommonTree TYPE24_tree = default(CommonTree);
	    CommonTree OPEN_PAR25_tree = default(CommonTree);
	    CommonTree CLOSE_PAR27_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "function");
		DebugLocation(32, 1);
		try
		{
			// jc.g:33:2: ( 'function' ( TYPE )? OPEN_PAR ( args )? CLOSE_PAR codeBlock )
			DebugEnterAlt(1);
			// jc.g:33:4: 'function' ( TYPE )? OPEN_PAR ( args )? CLOSE_PAR codeBlock
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(33, 4);
			string_literal23=(IToken)Match(input,42,Follow._42_in_function166); 
			string_literal23_tree = (CommonTree)adaptor.Create(string_literal23);
			adaptor.AddChild(root_0, string_literal23_tree);

			DebugLocation(33, 15);
			// jc.g:33:15: ( TYPE )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, decisionCanBacktrack[6]);
			int LA6_0 = input.LA(1);

			if ((LA6_0==TYPE))
			{
				alt6 = 1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// jc.g:33:15: TYPE
				{
				DebugLocation(33, 15);
				TYPE24=(IToken)Match(input,TYPE,Follow._TYPE_in_function168); 
				TYPE24_tree = (CommonTree)adaptor.Create(TYPE24);
				adaptor.AddChild(root_0, TYPE24_tree);


				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(33, 21);
			OPEN_PAR25=(IToken)Match(input,OPEN_PAR,Follow._OPEN_PAR_in_function171); 
			OPEN_PAR25_tree = (CommonTree)adaptor.Create(OPEN_PAR25);
			adaptor.AddChild(root_0, OPEN_PAR25_tree);

			DebugLocation(33, 30);
			// jc.g:33:30: ( args )?
			int alt7=2;
			try { DebugEnterSubRule(7);
			try { DebugEnterDecision(7, decisionCanBacktrack[7]);
			int LA7_0 = input.LA(1);

			if ((LA7_0==TYPE))
			{
				alt7 = 1;
			}
			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// jc.g:33:30: args
				{
				DebugLocation(33, 30);
				PushFollow(Follow._args_in_function173);
				args26=args();
				PopFollow();

				adaptor.AddChild(root_0, args26.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(7); }

			DebugLocation(33, 36);
			CLOSE_PAR27=(IToken)Match(input,CLOSE_PAR,Follow._CLOSE_PAR_in_function176); 
			CLOSE_PAR27_tree = (CommonTree)adaptor.Create(CLOSE_PAR27);
			adaptor.AddChild(root_0, CLOSE_PAR27_tree);

			DebugLocation(33, 46);
			PushFollow(Follow._codeBlock_in_function178);
			codeBlock28=codeBlock();
			PopFollow();

			adaptor.AddChild(root_0, codeBlock28.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("function", 6);
			LeaveRule("function", 6);
			LeaveRule_function();
	    }
	 	DebugLocation(34, 1);
		} finally { DebugExitRule(GrammarFileName, "function"); }
		return retval;

	}
	// $ANTLR end "function"

